# sammy

./: .gitignore  Cargo.toml  Dockerfile.binance  Dockerfile.collector  Dockerfile.folder  Dockerfile.kraken  Dockerfile.kraken_fetcher  Dockerfile.trade_history_migrate  Dockerfile.trade_history_migrate_test  Dockerfile.trade_history_migrator  Dockerfile.webserver  LICENSE
.art/: settings.toml
api/: README.md  collector.raml  folder.raml
api/schema/: assets.json  exchanges.json  tick.json  trade-history-collection-summary.json  trade-history-item.json  trade-history-summary.json
collector/: .env.sample  Cargo.toml
collector/design/: purpose.md
collector/src/: config.rs  database.rs  filter.rs  lib.rs  main.rs
collector/src/filter/: binance.rs  kraken.rs  mod.rs
collector/src/restful/: handler.rs  mod.rs  state.rs
common/: Cargo.toml
common/src/: asset.rs  errors.rs  exchange.rs  lib.rs  tick.rs  time_util.rs  trade.rs
db/trade_history/: .env.sample  Cargo.toml  sammy_trade_history.sql
db/trade_history/migrations/2018-09-10-154232_trade_history/: down.sql  up.sql
db/trade_history/src/: crud.rs  crud2.rs  error.rs  lib.rs  model.rs  schema.rs
db/trade_history/src/migration/: m01_initial.rs  m02_add_binance.rs  m03_extend_trade_history_items.rs  mod.rs
db/trade_history/tests/: trade_history.rs
design/: purpose.md
fetchers/binance/: .env.sample  Cargo.toml
fetchers/binance/src/: config.rs  fetch.rs  lib.rs  main.rs  model.rs  payload.rs  subscription.rs
fetchers/fetch_lib/: Cargo.toml
fetchers/fetch_lib/src/: https_client.rs  lib.rs  place.rs  retry.rs
fetchers/kraken/: .env.sample  Cargo.toml  error1.json
fetchers/kraken/design/: purpose.md
fetchers/kraken/src/: config.rs  fetch.rs  lib.rs  main.rs  model.rs  targets.rs
fetchers/kraken_fetcher/: .env.sample  Cargo.toml  success1.json
fetchers/kraken_fetcher/src/: config.rs  conversion.rs  fetch.rs  https_client.rs  lib.rs  main.rs  model.rs  place.rs  targets.rs
fetchers/kraken_fetcher/src/kraken/: mod.rs
folder/: .env.sample  Cargo.toml  api.raml
folder/src/: config.rs  database.rs  fold.rs  intermediate.rs  lib.rs  main.rs  output.rs
folder/src/restful/: handler.rs  mod.rs  state.rs
order_book_fetcher/: Cargo.toml
order_match_fetcher/: .env.sample  Cargo.toml
order_match_fetcher/src/: asset.rs  config.rs  https_client.rs  lib.rs  main.rs
order_match_fetcher/src/kraken/: mod.rs
ticker_db/: .env.sample  Cargo.toml
ticker_db/migrations/2018-09-07-162240_ticks/: down.sql  up.sql
ticker_db/src/: crud.rs  lib.rs  model.rs  schema.rs
translator/: .env.sample  Cargo.toml  README.md  api.raml
translator/src/: config.rs  database.rs  filter.rs  lib.rs  main.rs  ticker.rs
translator/src/restful/: handler.rs  mod.rs  state.rs
webclient/: Cargo.toml
webclient/src/: if_feature.rs  lib.rs
webserver/: .env.sample  Cargo.toml
webserver/src/: config.rs  function.rs  handler.rs  main.rs  middle.rs  model.rs
webserver/www/: demo1.html  modified-example.html
