[package]
name = "folder"
version = "0.1.1"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[lib]
name = "folder_lib"
path = "src/lib.rs"

[dependencies]
dotenv = "0.13.0"
log = "0.4.4"
env_logger = "0.5.13"
chrono = "0.4.6"
actix = "0.7.4"
actix-web = "0.7.8"
futures = "0.1.24"
serde = "1.0.79"
serde_derive = "1.0.79"
rust_decimal = "0.10.1"

# Internal sammy project crates
common = { path = "../common" }
trade_history = { path = "../db/trade_history" }
