[package]
name = "order_match_fetcher"
version = "0.1.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[lib]
name = "order_match_fetcher_lib"
path = "src/lib.rs"

[dependencies]
futures = "0.1.23"
tokio = "0.1.7"
hyper = { version = "0.12.8", default-features = false, features = ["net2", "futures-cpupool"] }
#hyper = "0.12.8"
hyper-tls = "0.3.0"
