[package]
name = "translator"
version = "0.1.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[lib]
name = "translator_lib"
path = "src/lib.rs"

[dependencies]
log = "0.4.4"
env_logger = "0.5.13"
actix-web = "0.7.4"
actix = "0.7.4"
dotenv = "0.13.0"
bytes = "0.4.9"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"
chrono = "0.4.6"
futures = "0.1.23"

# Internal sammy project crates
common = { path = "../common" }
