[package]
name = "webclient"
version = "0.0.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[features]
default-features = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.28"
js-sys = "0.3.5"
cfg-if = "0.1.6"
console_error_panic_hook = { version = "0.1.5", optional = true }
jsonwebtoken = "5.0.1"
