[package]
name = "webserver"
version = "0.1.2"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[dependencies]
log = "0.4.4"
env_logger = "0.5.13"
actix-web = "0.7.4"
actix = "0.7.4"
dotenv = "0.13.0"
rust_decimal = "0.10.1"
chrono = "0.4.6"
futures = "0.1.24"
bytes = "0.4.10"
serde = "1.0.79"
serde_json = "1.0.31"

# Internal sammy project crates
common = { path = "../common" }
