[package]
name = "trade_history"
version = "0.1.1"
authors = ["Stephan Luther <kvsari@gmail.com>"]
publish = false

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"

[dependencies]
log = "0.4.5"
env_logger = "0.5.13"
chrono = "0.4.6"
rust_decimal = { version = "0.10.1", features = ["postgres"] }
derive-getters = "0.0.7"
serde = "1.0.78"
serde_derive = "1.0.78"
schemamama = "0.3.0"
schemamama_postgres = "0.2.2"
postgres = { version = "0.15.2", features = ["with-chrono"] }
dotenv = "0.13.0"
clap = "2.32.0"

# Internal sammy project crates
common = { path = "../../common" }
