[package]
name = "binance"
version = "0.1.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[lib]
name = "binance_lib"
path = "src/lib.rs"

[dependencies]
log = "0.4.5"
dotenv = "0.13.0"
env_logger = "0.5.13"
futures = "0.1.24"
tokio = "0.1.11"
ws = { version = "0.7.8", features = ["ssl"] }

# Internal sammy project crates
common = { path = "../../common" }
