[package]
name = "fetch_lib"
version = "0.1.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[dependencies]
hyper = { version = "0.12.11", default-features = false, features = ["net2", "futures-cpupool"] }
hyper-tls = "0.3.0"
serde_json = "1.0.26"
futures = "0.1.24"
log = "0.4.4"

# Internal sammy project crates
common = { path = "../../common" }
