[package]
name = "kraken"
version = "0.1.3"
authors = ["Stephan Luther <kvsari@gmail.com>"]

[lib]
name = "kraken_lib"
path = "src/lib.rs"

[dependencies]
futures = "0.1.23"
tokio = "0.1.8"
hyper = { version = "0.12.8", default-features = false, features = ["net2", "futures-cpupool"] }
hyper-tls = "0.3.0"
tokio-timer = "0.2.6"
log = "0.4.4"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
rust_decimal = "0.10.1"
env_logger = "0.5.13"
dotenv = "0.13.0"
num-traits = "0.2.5"
lazy_static = "1.1.0"
chrono = "0.4.6"

# Internal sammy project crates
common = { path = "../../common" }
fetch_lib = { path = "../fetch_lib" }
